fix team text align

--- a/css/styles.css
+++ b/css/styles.css
@@ -148,3 +148,10 @@ ul {
 .footer-text {
     font-size: 16px;
 }
+.team-name {
+    text-align: center;
+}
+
+.team-text {
+    text-align: center;
+}
